--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "date-reader",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "build": "tsc --watch",
+    "start": "node dist/index.js"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^17.0.36",
+    "typescript": "^4.7.2"
+  }
 }
