--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "date-reader",
+  "name": "image-name-formatter",
   "scripts": {
     "build": "tsc --watch",
     "start": "node dist/index.js"
   },
   "license": "MIT",
+  "dependencies": {
+    "exifr": "^7.1.3"
+  },
   "devDependencies": {
     "@types/node": "^17.0.36",
     "typescript": "^4.7.2"
